<resources>
    <string name="app_name">Pass</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_label">Sign in</string>
    <string name="signup_text">Don`t have an account? SignUp</string>
    <string name="title_activity_signup">Signup</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="signup_title_dialog">Oops!</string>
    <string name="signup_dialog_msg">Please enter your username,password and email address</string>
    <string name="signup_invalid_email_error">Enter a valid Email Address</string>
    <string name="email_hint">Email</string>
    <string name="re_enter_password_hint">Re-enter Password</string>
    <string name="password_does_not_match">Passwords do not match</string>
    <string name="password_error_title">Password</string>
    <string name="sign_up_error_title">Sign Up Error</string>
    <string name="login_error_message">Please enter a correct username and password</string>
    <string name="sin_in_error_title">Sign In Error</string>
    <string name="log_out_label">Logout</string>
    <string name="no_msg_list_text">No New Message</string>
    <string name="friends_empty_text_view">Add Friends To chat</string>
    <string name="inbox_fragment_title">INBOX</string>
    <string name="friends_fragment_title">FRIENDS</string>
    <string name="edit_friends_menu_option">Edit Friends</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="query_friends_dialog_title">Sorry</string>
    <string name="menu_camera_label">Camera</string>
    <string name="camera_toast_error_msg">No external storage found</string>
    <string name="general_error">Sorry there was an error</string>
    <string name="video_size_notice">Video must be less than 10 MBs</string>
    <string name="file_not_found_error">File cannot be found</string>
    <string name="io_error">An error has occured</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Videos</item>
    </string-array>
    <string name="title_activity_recipient">Choose Recipient</string>
    <string name="empty_recipient_txt">Please Add some friends</string>
    <string name="message_dialog_title">We`re sorry</string>
    <string name="message_dialog_message">There was a problem with the selected file. Select another one</string>
    <string name="send_error_dialog_message">Message Not sent, Try again</string>
    <string name="send_success_toast">Message sent</string>
    <string name="title_activity_view_image">Pass</string>
    <string name="app_sub_title">An Xpect Project</string>


</resources>
